# mobile-robotics_2024

./: CMakeLists.txt  addtional_help.txt  package.xml  start.sh
config/: Global_Planner.yaml  config.rviz  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  local_costmap_params.yaml  move_base_params.yaml
launch/: amcl.launch  mobile-robotics.launch  move_base.launch  move_base_project.launch
maps/4by4/: 4by4.world  4by4_OG.world
maps/4by4/4by4/: model.config  model.sdf
maps/UE2/: ue2.world
maps/UE3/: maze.yaml  ue3.world  ue3_Maze.world.xml  ue3_Maze_old.world
maps/UE3/ue3_Maze/: model.config  model.sdf
maps/models/bmr6_mor_ue2/: model.config  model.sdf
maps/models/bmr6_mor_ue2/materials/scripts/: ue2.material
maps/models/bmr6_mor_ue3/: model.config  model.sdf
maps/models/bmr6_mor_ue3/materials/scripts/: ue1.material
maps/models/bmr6_mor_wh/: model.sdf
maps/models/bmr6_mor_wh/materials/scripts/: ue2.material
maps/models/project/: model.config  model.sdf
maps/models/project/materials/scripts/: project (Kopie).material  project.material
maps/project/: maze.yaml  project.world
maps/simple/: simple.world
maps/simple/materials/scripts/: my_ground_plane.material
maps/wh/: wh.world
src/: line_follower_main_detection.py  line_follower_main_motion.py
urdf/: turtlebot3_burger_for_autorace.gazebo.xacro  turtlebot3_burger_for_autorace.urdf.xacro
